--- a/index.html
+++ b/index.html
@@ -10,36 +10,40 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <nav>
         <a class="logo" href="./index.html">
           Web<span class="logo_part2">Studio</span></a
         >
-        <ul>
-          <li>
-            <a class="navigation-current" href="./index.html">Студия</a>
+        <ul class="menu-nav">
+          <li class="item">
+            <a class="navigation current" href="./index.html">Студия</a>
           </li>
-          <li>
+          <li class="item">
             <a class="navigation" href="./portfolio.html">Портфолио</a>
           </li>
-          <li>
+          <li class="item">
             <a class="navigation" href="#">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a class="adress2" href="mailto:info@devstudio.com"
+      <ul class="adress-nav">
+        <li class="item">
+          <a class="adress" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li>
-          <a class="adress2" href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="item">
+          <a class="adress" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -48,7 +52,7 @@
       <!--banner-->
       <section class="hero">
         <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
-        <button class="order" type="button">Заказать услугу</button>
+        <button class="order button" type="button">Заказать услугу</button>
       </section>
 
       <!--Section_1-->
@@ -134,15 +138,15 @@
         Web<span class="logo_part2_1">Studio</span></a
       >
       <div>
-        <p class="adress1">г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="adress2">г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
           <li>
-            <a class="adress2" href="mailto:info@example.com"
+            <a class="adress3" href="mailto:info@example.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="adress2" href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="adress3" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </div>
