Добавлена шапка сайта

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,33 +19,34 @@
   </head>
 
   <body>
+    <!--Шапка сайта-->
     <header class="header">
-      <nav>
+      <nav class="container main-nav">
         <a class="logo" href="./index.html">
           Web<span class="logo_part2">Studio</span></a
         >
-        <ul>
-          <li>
+        <ul class="site-nav menu">
+          <li class="item">
             <a class="navigation" href="./index.html">Студия</a>
           </li>
-          <li>
+          <li class="item">
             <a class="navigation current" href="./portfolio.html">Портфолио</a>
           </li>
-          <li>
+          <li class="item">
             <a class="navigation" href="#">Контакты</a>
           </li>
         </ul>
+        <ul class="site-nav auth">
+          <li class="item">
+            <a class="adress" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a class="adress" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </nav>
-      <ul>
-        <li>
-          <a class="adress" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="adress" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
     </header>
 
     <main>
