--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
   </head>
 
   <body>
+    <!--Шапка сайта-->
     <header class="header">
-      <nav>
+      <nav class="container main-nav">
         <a class="logo" href="./index.html">
           Web<span class="logo_part2">Studio</span></a
         >
-        <ul class="menu-nav">
+        <ul class="site-nav menu">
           <li class="item">
             <a class="navigation current" href="./index.html">Студия</a>
           </li>
@@ -35,17 +36,17 @@
             <a class="navigation" href="#">Контакты</a>
           </li>
         </ul>
+        <ul class="site-nav auth">
+          <li class="item">
+            <a class="adress" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a class="adress" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </nav>
-      <ul class="adress-nav">
-        <li class="item">
-          <a class="adress" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="item">
-          <a class="adress" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
     </header>
 
     <main>
