--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
 
     <main>
-      <!--banner-->
+      <!--hero-->
       <section class="hero">
         <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
         <button class="order button" type="button">Заказать услугу</button>
