--- a/index.html
+++ b/index.html
@@ -50,38 +50,37 @@
     </header>
 
     <main>
-      <!--hero-->
+      <!--Герой-->
       <section class="hero">
         <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
         <button class="order button" type="button">Заказать услугу</button>
       </section>
 
-      <!--Section_1-->
-      <section>
-        <!-- <h2>Особенности</h2> -->
-        <ul>
-          <li>
+      <!--Особености-->
+      <section class="section">
+        <ul class="feature">
+          <li class="feature-item">
             <h3 class="skills">Внимание к деталям</h3>
             <p class="skills-info">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3 class="skills">Пунктуальность</h3>
             <p class="skills-info">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3 class="skills">Планирование</h3>
             <p class="skills-info">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3 class="skills">Современные технологии</h3>
             <p class="skills-info">
               Значимость этих проблем настолько очевидна, что реализация
@@ -92,41 +91,41 @@
       </section>
 
       <!--Section_work-->
-      <section>
-        <h2 class="type-h2">Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="work">
+        <h2 class="work-header">Чем мы занимаемся</h2>
+        <ul class="work-container">
+          <li class="work-item">
             <img src="./images/work_1.jpg" width="370" alt="занятие 1" />
           </li>
-          <li>
+          <li class="work-item">
             <img src="./images/work_2.jpg" width="370" alt="занятие 2" />
           </li>
-          <li>
+          <li class="work-item">
             <img src="./images/work_3.jpg" width="370" alt="занятие 3" />
           </li>
         </ul>
       </section>
 
-      <!--Section_team-->
-      <section class="team">
+      <!--Наша команда-->
+      <section class="team team-container">
         <h2 class="type-h2">Наша команда</h2>
-        <ul>
-          <li>
+        <ul class="team-list">
+          <li class="team-item">
             <img src="./images/team_1.jpg" width="270" alt="Игорь" />
             <h3 class="team-memb-name">Игорь Демьяненко</h3>
             <p lang="en" class="team-position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team_2.jpg" width="270" alt="Ольга" />
             <h3 class="team-memb-name">Ольга Репина</h3>
             <p lang="en" class="team-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team_3.jpg" width="270" alt="Николай" />
             <h3 class="team-memb-name">Николай Тарасов</h3>
             <p lang="en" class="team-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team_4.jpg" width="270" alt="Михаил" />
             <h3 class="team-memb-name">Михаил Ермаков</h3>
             <p lang="en" class="team-position">UI Designer</p>
@@ -134,7 +133,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
+  <footer class="footer">
       <a class="logo" href="./index.html">
         Web<span class="logo_part2_1">Studio</span></a
       >
@@ -152,5 +151,4 @@
         </ul>
       </div>
     </footer>
-  </body>
 </html>
