--- a/portfolio.html
+++ b/portfolio.html
@@ -52,87 +52,98 @@
     <main>
       <!--Filter_panel-->
       <section>
-        <h2>Наши работы</h2>
-        <ul>
-          <li>
+        <ul class="filter">
+          <li class="item">
             <button class="order2 active-button button" type="button">
               Все
             </button>
           </li>
-          <li>
+          <li class="item">
             <button class="order2 button" type="button">Веб-сайты</button>
           </li>
-          <li>
+          <li class="item">
             <button class="order2 button" type="button">Приложения</button>
           </li>
-          <li><button class="order2 button" type="button">Дизайн</button></li>
-          <li>
+          <li class="item">
+            <button class="order2 button" type="button">Дизайн</button>
+          </li>
+          <li class="item">
             <button class="order2 button" type="button">Маркетинг</button>
           </li>
         </ul>
       </section>
 
       <!--portfolio-->
-      <section>
-        <ul>
-          <li>
-            <img src="./images/prj1.jpg" alt="Технокряк" />
-            <h2 class="project-title">Технокряк</h2>
-            <p class="project-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/prj2.jpg"
-              width="370"
-              alt="New Orlean vs Golden Star"
-            />
-            <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-            <p class="project-text">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/prj3.jpg" width="370" alt="Ресторан Seafood" />
-            <h2 class="project-title">Ресторан Seafood</h2>
-            <p class="project-text">Приложение</p>
-          </li>
-          <li>
-            <img src="./images/prj4.jpg" width="370" alt="Проект Prime" />
-            <h2 class="project-title">Проект Prime</h2>
-            <p class="project-text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/prj5.jpg" width="370" alt="Проект Boxes" />
-            <h2 class="project-title">Проект Boxes</h2>
-            <p class="project-text">Приложение</p>
-          </li>
-          <li>
-            <img
-              src="./images/prj6.jpg"
-              width="370"
-              alt="Inspiration has no Borders"
-            />
-            <h2 class="project-title">Inspiration has no Borders</h2>
-            <p class="project-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/prj7.jpg"
-              width="370"
-              alt="Издание Limited Edition"
-            />
-            <h2 class="project-title">Издание Limited Edition</h2>
-            <p class="project-text">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/prj8.jpg" width="370" alt="Проект LAB" />
-            <h2 class="project-title">Проект LAB</h2>
-            <p class="project-text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/prj9.jpg" width="370" alt="Growing Business" />
-            <h2 class="project-title">Growing Business</h2>
-            <p class="project-text">Приложение</p>
-          </li>
-        </ul>
+      <section class="test-container">
+        <div>
+          <ul class="flex-container">
+            <li class="flex-element">
+              <img src="./images/prj1.jpg" alt="Технокряк" />
+              <h2 class="project-title">Технокряк</h2>
+              <p class="project-text">Веб-сайт</p>
+            </li>
+
+            <li class="flex-element">
+              <img
+                src="./images/prj2.jpg"
+                width="370"
+                alt="New Orlean vs Golden Star"
+              />
+              <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+              <p class="project-text">Дизайн</p>
+            </li>
+
+            <li class="flex-element">
+              <img src="./images/prj3.jpg" width="370" alt="Ресторан Seafood" />
+              <h2 class="project-title">Ресторан Seafood</h2>
+              <p class="project-text">Приложение</p>
+            </li>
+
+            <li class="flex-element">
+              <img src="./images/prj4.jpg" width="370" alt="Проект Prime" />
+              <h2 class="project-title">Проект Prime</h2>
+              <p class="project-text">Маркетинг</p>
+            </li>
+
+            <li class="flex-element">
+              <img src="./images/prj5.jpg" width="370" alt="Проект Boxes" />
+              <h2 class="project-title">Проект Boxes</h2>
+              <p class="project-text">Приложение</p>
+            </li>
+
+            <li class="flex-element">
+              <img
+                src="./images/prj6.jpg"
+                width="370"
+                alt="Inspiration has no Borders"
+              />
+              <h2 class="project-title">Inspiration has no Borders</h2>
+              <p class="project-text">Веб-сайт</p>
+            </li>
+
+            <li class="flex-element">
+              <img
+                src="./images/prj7.jpg"
+                width="370"
+                alt="Издание Limited Edition"
+              />
+              <h2 class="project-title">Издание Limited Edition</h2>
+              <p class="project-text">Дизайн</p>
+            </li>
+
+            <li class="flex-element">
+              <img src="./images/prj8.jpg" width="370" alt="Проект LAB" />
+              <h2 class="project-title">Проект LAB</h2>
+              <p class="project-text">Маркетинг</p>
+            </li>
+
+            <li class="flex-element">
+              <img src="./images/prj9.jpg" width="370" alt="Growing Business" />
+              <h2 class="project-title">Growing Business</h2>
+              <p class="project-text">Приложение</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
