--- a/index.html
+++ b/index.html
@@ -12,75 +12,82 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
 
   <body>
-    <!--Шапка сайта-->
     <header class="header">
-      <nav class="container main-nav">
-        <a class="logo" href="./index.html">
-          Web<span class="logo_part2">Studio</span></a
-        >
-        <ul class="site-nav menu">
-          <li class="item">
-            <a class="navigation current" href="./index.html">Студия</a>
-          </li>
-          <li class="item">
-            <a class="navigation" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="item">
-            <a class="navigation" href="#">Контакты</a>
-          </li>
-        </ul>
-        <ul class="site-nav auth">
-          <li class="item">
-            <a class="adress" href="mailto:info@devstudio.com"
+      <div class="conteiner">
+        <nav class="header-nav">
+          <a class="header-logo" href="./index.html">
+            Web<span class="header-logo2">Studio</span></a
+          >
+          <ul class="list menu-list">
+            <li>
+              <a class="menu-link link current" href="./index.html">Студия</a>
+            </li>
+            <li>
+              <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li>
+              <a class="menu-link link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul>
+          <li>
+            <a class="header-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a class="adress" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li>
+            <a class="header-tel link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
 
     <main>
-      <!--Герой-->
+      <!--banner-->
       <section class="hero">
         <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
-        <button class="order button" type="button">Заказать услугу</button>
+        <button class="order" type="button">Заказать услугу</button>
       </section>
 
-      <!--Особености-->
-      <section class="section">
-        <ul class="feature">
-          <li class="feature-item">
+      <!--Section_1-->
+      <section>
+        <!-- <h2>Особенности</h2> -->
+        <ul>
+          <li>
             <h3 class="skills">Внимание к деталям</h3>
             <p class="skills-info">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li class="feature-item">
+          <li>
             <h3 class="skills">Пунктуальность</h3>
             <p class="skills-info">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li class="feature-item">
+          <li>
             <h3 class="skills">Планирование</h3>
             <p class="skills-info">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li class="feature-item">
+          <li>
             <h3 class="skills">Современные технологии</h3>
             <p class="skills-info">
               Значимость этих проблем настолько очевидна, что реализация
@@ -91,41 +98,41 @@
       </section>
 
       <!--Section_work-->
-      <section class="work">
-        <h2 class="work-header">Чем мы занимаемся</h2>
-        <ul class="work-container">
-          <li class="work-item">
+      <section>
+        <h2 class="type-h2">Чем мы занимаемся</h2>
+        <ul>
+          <li>
             <img src="./images/work_1.jpg" width="370" alt="занятие 1" />
           </li>
-          <li class="work-item">
+          <li>
             <img src="./images/work_2.jpg" width="370" alt="занятие 2" />
           </li>
-          <li class="work-item">
+          <li>
             <img src="./images/work_3.jpg" width="370" alt="занятие 3" />
           </li>
         </ul>
       </section>
 
-      <!--Наша команда-->
-      <section class="team team-container">
+      <!--Section_team-->
+      <section class="team">
         <h2 class="type-h2">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-item">
+        <ul>
+          <li>
             <img src="./images/team_1.jpg" width="270" alt="Игорь" />
             <h3 class="team-memb-name">Игорь Демьяненко</h3>
             <p lang="en" class="team-position">Product Designer</p>
           </li>
-          <li class="team-item">
+          <li>
             <img src="./images/team_2.jpg" width="270" alt="Ольга" />
             <h3 class="team-memb-name">Ольга Репина</h3>
             <p lang="en" class="team-position">Frontend Developer</p>
           </li>
-          <li class="team-item">
+          <li>
             <img src="./images/team_3.jpg" width="270" alt="Николай" />
             <h3 class="team-memb-name">Николай Тарасов</h3>
             <p lang="en" class="team-position">Marketing</p>
           </li>
-          <li class="team-item">
+          <li>
             <img src="./images/team_4.jpg" width="270" alt="Михаил" />
             <h3 class="team-memb-name">Михаил Ермаков</h3>
             <p lang="en" class="team-position">UI Designer</p>
@@ -133,22 +140,23 @@
         </ul>
       </section>
     </main>
-  <footer class="footer">
+    <footer class="footer">
       <a class="logo" href="./index.html">
         Web<span class="logo_part2_1">Studio</span></a
       >
       <div>
-        <p class="adress2">г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="adress1">г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
           <li>
-            <a class="adress3" href="mailto:info@example.com"
+            <a class="adress2" href="mailto:info@example.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="adress3" href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="adress2" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </div>
     </footer>
+  </body>
 </html>
