--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
 
     <main>
       <!--Герой-->
-      <section>
-        <div class="hero hero-container">                         
+      <section class="hero hero-container">
+        <div>                         
           <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
           <button class="order" type="button">Заказать услугу</button>     
          </div>
       </section>      
 
       <!--Особенности-->
-       <section>
-        <div class="container skills-container">       
+       <section class="skills-section">
+        <div class="container">       
           <h2 class="visually-hidden ">Особенности</h2>
           <ul class="skills-list">
             <li class="skills-item">
@@ -104,7 +104,7 @@
       </section>
 
       <!--Наша работа-->
-      <section>
+      <section class="work-section">
         <div class="container">
           <h2 class="work-header">Чем мы занимаемся</h2>
           <ul class="work-list">
@@ -161,12 +161,11 @@
     </main>
     
     <footer class="footer">
-      <div class="container">
-        <div class="footer-logo-container">
-          <a class="footer-logo" href="./index.html">
+      <div class="container">       
+          <p class="logo-padding">
+            <a class="footer-logo" href="./index.html">
             Web<span class="footer-logo2">Studio</span></a
-          >
-        </div>
+          ></p>       
         <address class="adress">
           <p class="footer-adress">
             г. Киев, пр-т Леси Украинки, 26
