--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
           <ul class="list menu-list">
             <li class="menu-item">
-              <a class="menu-link link current" href="./index.html">Студия</a>
+              <a class="menu-link link link-current" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="menu-item">
+            <li class="menu-item lust-item">
               <a class="menu-link link" href="#">Контакты</a>
             </li>
           </ul>
@@ -59,8 +59,8 @@
 
     <main>
       <!--Герой-->
-      <section class="hero hero-container">
-        <div>                         
+      <section>
+        <div class="hero hero-container">                         
           <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
           <button class="order" type="button">Заказать услугу</button>     
          </div>
@@ -122,8 +122,8 @@
       </section>
 
       <!--Наша команда-->
-      <section class="team-container">
-        <div class="container">
+      <section>
+        <div class="container team-container">
           <h2 class="team-header">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -161,11 +161,10 @@
     </main>
     
     <footer class="footer">
-      <div class="container">       
-          <p class="logo-padding">
+      <div class="container">    
             <a class="footer-logo" href="./index.html">
             Web<span class="footer-logo2">Studio</span></a
-          ></p>       
+          >     
         <address class="adress">
           <p class="footer-adress">
             г. Киев, пр-т Леси Украинки, 26
