--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,9 @@
               <a class="menu-link link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
+              <a class="menu-link link  link-current" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="menu-item">
+            <li class="menu-item lust-item">
               <a class="menu-link link" href="#">Контакты</a>
             </li>
           </ul>
@@ -58,13 +58,15 @@
     </header>
 
 <main>
-  <section>
+  <section class="section">
     <div class="container">
+
       <!--Фильтр работ-->
-      <h1 class="visually-hidden"> Портфолио</h1>      
+      <h1 class="visually-hidden"> Портфолио</h1>   
+
       <ul class="filter">
         <li class="item">
-          <button class="order2 active-button button" type="button">
+          <button class="order2, active-button button" type="button">
         Все
         </button>
         </li>
@@ -148,11 +150,10 @@
 </main>
 
      <footer class="footer">
-      <div class="container">       
-          <p class="logo-padding">
+      <div class="container">    
             <a class="footer-logo" href="./index.html">
             Web<span class="footer-logo2">Studio</span></a
-          ></p>       
+          >     
         <address class="adress">
           <p class="footer-adress">
             г. Киев, пр-т Леси Украинки, 26
